--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.8",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@types/lodash": "^4.17.12",
     "express": "^4.18.2",
     "flag-icons": "^7.2.3",
+    "lodash": "^4.17.21",
     "mdb-angular-ui-kit": "^7.0.0",
     "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
